--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ android {
         release.setRoot('build-types/release')
     }
     defaultConfig {}
+    compileSdkVersion 19
 }
 
 dependencies {
